--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
 <h1>测试内容sqqqwwwqqqqqqqqwww</h1>
 <div>
     <div class="child">
-<<<<<<< HEAD
 
         nihaoaaa111111
 
-
+        nihaoaaa11111122222
+        33333333
     </div>
 </div>
 <script src="scripts/app.js"></script>
